# TableGUI

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: engine.py
src/TableGUI/: __init__.py  engine.py
tests/: engine.py  image_test.py
