[project]
name = "TableGUI"
version = "1.1.3"
authors = [
  { name="minaroblox", email="emanuelgardunomondragon@gmail.com" },
]
dependencies = [
  "numpy>=2.3.4",
  "pillow>=12.0.0",
  "pygame>=2.6.1"
]
description = "A functional system to convert arrays into pixels using pygame."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/MinaRoblox/TableGUI"
